# fetch-sre-takehome

./: README.md  http_endpoint_checkup.py  pyproject.toml  requirements.txt
